Requires:
~~~~~~~~~
- python2.4
New features:
~~~~~~~~~~~~~
- API : enable / disable EventManager
Bug fixes:
~~~~~~~~~~
- #1116, was incorrect name of called method in SubscriptionTool
- #1125, fixed Unauthorized when subscribing as member.
- #1143 removed dependency on CPSBoxes in the popup forms
- Fixed security declaration on some methods.
- #1162: Searching members in groups
- #1158: Subscription on CPSScharedCalendar : id ".cps_subscriptions" is
  invalid
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Better error messages when notification mail templates are incorrect.
- Added ignore_events flag on subscriptions tool.
- EventManager cleanups
  o use logging instead of the zLOG
  o use zope.interface
- API changes :
  o EventManager -> EventSusbcriptionsManager
  o get_event_manager -> get_event_subscriptions_manager
  o del_event_manager -> del_event_subscriotions_manager